; ModuleID = '/home/carl/AnghaBench/linux/drivers/rtc/extr_rtc-max8998.c_max8998_rtc_read_time.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/rtc/extr_rtc-max8998.c_max8998_rtc_read_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.rtc_time = type { i32 }
%struct.max8998_rtc_info = type { i32 }

@MAX8998_RTC_SEC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.rtc_time*)* @max8998_rtc_read_time to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @max8998_rtc_read_time(%struct.device* %0, %struct.rtc_time* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.device*, align 8
  %5 = alloca %struct.rtc_time*, align 8
  %6 = alloca %struct.max8998_rtc_info*, align 8
  %7 = alloca [8 x i32], align 16
  %8 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %4, align 8
  store %struct.rtc_time* %1, %struct.rtc_time** %5, align 8
  %9 = load %struct.device*, %struct.device** %4, align 8
  %10 = call %struct.max8998_rtc_info* @dev_get_drvdata(%struct.device* %9)
  store %struct.max8998_rtc_info* %10, %struct.max8998_rtc_info** %6, align 8
  %11 = load %struct.max8998_rtc_info*, %struct.max8998_rtc_info** %6, align 8
  %12 = getelementptr inbounds %struct.max8998_rtc_info, %struct.max8998_rtc_info* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @MAX8998_RTC_SEC, align 4
  %15 = getelementptr inbounds [8 x i32], [8 x i32]* %7, i64 0, i64 0
  %16 = call i32 @max8998_bulk_read(i32 %13, i32 %14, i32 8, i32* %15)
  store i32 %16, i32* %8, align 4
  %17 = load i32, i32* %8, align 4
  %18 = icmp slt i32 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %2
  %20 = load i32, i32* %8, align 4
  store i32 %20, i32* %3, align 4
  br label %25

21:                                               ; preds = %2
  %22 = getelementptr inbounds [8 x i32], [8 x i32]* %7, i64 0, i64 0
  %23 = load %struct.rtc_time*, %struct.rtc_time** %5, align 8
  %24 = call i32 @max8998_data_to_tm(i32* %22, %struct.rtc_time* %23)
  store i32 0, i32* %3, align 4
  br label %25

25:                                               ; preds = %21, %19
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local %struct.max8998_rtc_info* @dev_get_drvdata(%struct.device*) #1

declare dso_local i32 @max8998_bulk_read(i32, i32, i32, i32*) #1

declare dso_local i32 @max8998_data_to_tm(i32*, %struct.rtc_time*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
